--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,41 @@
-# Operating System Files
+# Operating System files
 .DS_Store
 Thumbs.db
 
-# IDE Files
+# IDE files
 .idea/
 .vscode/
 *.sublime-project
 *.sublime-workspace
 
-# Dependency directories
+# Dependencies
 /vendor/
 /node_modules/
 
-# Build directories
+# Build files
 /dist/
-/build/
+*.zip
 
 # WordPress specific
-*.log
 wp-config.php
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
 wp-content/uploads/
-wp-content/mu-plugins/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
+wp-content/upgrade/
+wp-content/backup-db/
+wp-content/cache/
+wp-content/backups/
 
-# Misc
-*.bak
+# Testing
+/phpunit.xml
+.phpunit.result.cache
+/tests/coverage/
+
+# Environment files
+.env
+.env.*
+!.env.example
+
+# Temporary files
+*.log
 *.swp
-*.zip
-.env 
+*.bak
+*~ 
